Bổ sung phần Khách hàng

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
             <artifactId>mssql-jdbc</artifactId>
             <version>8.2.2.jre11</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.itextpdf/itext7-core -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.0.4</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
 </project>
